--- a/SM Inmobiliaria/SM Inmobiliaria/src/pantallas/PrincipalAdministrador.form
+++ b/SM Inmobiliaria/SM Inmobiliaria/src/pantallas/PrincipalAdministrador.form
@@ -405,7 +405,7 @@
             <Container class="javax.swing.JPanel" name="jPanel12">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="0" green="ff" id="yellow" palette="1" red="ff" type="palette"/>
+                  <Color blue="0" green="0" id="red" palette="1" red="ff" type="palette"/>
                 </Property>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[1012, 50]"/>
